--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,6 +40,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - name: Install dependencies 👨🏻‍💻
+        run: yarn
+
       - name: Generate
         run: yarn run generate
 
