--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Generate
         run: yarn run generate
+        env:
+          BASE_URL: /board-game-calendar/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
