--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "ts-jest": "^26.5.4",
+    "vue-class-component": "^7.2.6",
     "vue-jest": "^3.0.4"
   }
 }
