--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -44,6 +44,7 @@ jobs:
         run: yarn run generate
         env:
           BASE_URL: /board-game-calendar/
+          FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
