--- a/package.json
+++ b/package.json
@@ -22,14 +22,20 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "eslint-plugin-jsdoc": "^35.1.1",
+    "firebase": "^8.6.3",
+    "firebaseui": "^4.8.0",
+    "nuxt": "^2.15.3",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
