--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --port 3005",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "test": "jest"
   },
@@ -22,12 +22,11 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
     "core-js": "^3.9.1",
-    "eslint-plugin-jsdoc": "^35.1.1",
     "firebase": "^8.6.3",
     "firebaseui": "^4.8.0",
     "nuxt": "^2.15.3",
+    "nuxt-property-decorator": "^2.9.1",
     "vue": "^2.6.12"
   },
   "devDependencies": {
@@ -39,18 +38,18 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.2",
     "eslint": "^7.22.0",
     "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.7.0",
+    "eslint-plugin-vue": "^7.10.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "ts-jest": "^26.5.4",
-    "vue-class-component": "^7.2.6",
+    "vue-eslint-parser": "^7.6.0",
     "vue-jest": "^3.0.4"
   }
 }
