--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lint-staged": "^11.0.0",
     "ts-jest": "^26.5.4",
     "vue-eslint-parser": "^7.6.0",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vuetify": "^2.5.1"
   }
 }
