--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     }
   },
   "dependencies": {
+    "@types/xml2js": "^0.4.8",
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
     "firebase": "^8.6.3",
     "firebaseui": "^4.8.0",
     "nuxt": "^2.15.3",
     "nuxt-property-decorator": "^2.9.1",
-    "vue": "^2.6.12"
+    "querystring": "^0.2.1",
+    "vue": "^2.6.12",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
