--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
+    "preinstall": "node -e \"if(process.env.npm_execpath.indexOf('yarn') === -1) throw new Error('You must use Yarn to install, not NPM')\"",
     "test": "jest"
   },
   "lint-staged": {
@@ -21,16 +22,18 @@
     }
   },
   "dependencies": {
-    "@types/xml2js": "^0.4.8",
     "@nuxtjs/axios": "^5.13.1",
+    "awesome-phonenumber": "^2.52.0",
     "core-js": "^3.9.1",
     "firebase": "^8.6.3",
     "firebaseui": "^4.8.0",
     "nuxt": "^2.15.3",
     "nuxt-property-decorator": "^2.9.1",
     "querystring": "^0.2.1",
+    "validator": "^13.6.0",
     "vue": "^2.6.12",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
@@ -41,6 +44,8 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@types/vuelidate": "^0.7.14",
+    "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
