--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "types": [
       "@nuxt/types",
       "@nuxtjs/axios",
-      "@types/node"
+      "@types/node",
+      "@nuxt/vue-app",
+      "@nuxtjs/vuetify"
     ]
   },
   "exclude": [
