--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
   "dependencies": {
     "awesome-phonenumber": "^2.52.0",
     "core-js": "^3.9.1",
-    "firebase": "^8.6.7",
-    "firebaseui": "^4.8.0",
+    "firebase": "^9.6.10",
+    "firebaseui": "^6.0.1",
     "nuxt": "^2.15.3",
     "nuxt-property-decorator": "^2.9.1",
+    "sass": "1.49.11",
     "validator": "^13.6.0",
-    "vue": "^2.6.12",
+    "vue": "2",
     "xml2js": "^0.4.23",
     "yup": "^0.32.9"
   },
@@ -38,28 +39,34 @@
     "sass": "1.32.12"
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config-typescript": "^6.0.0",
+    "@nuxtjs/eslint-config-typescript": "^9.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.11.3",
     "@types/validator": "^13.1.4",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@vue/test-utils": "^1.1.3",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@vue/test-utils": "^2.0.0-rc.19",
     "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.2",
-    "eslint": "^7.22.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.10.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
-    "ts-jest": "^26.5.4",
-    "vue-eslint-parser": "^7.6.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "eslint-plugin-vuetify": "^1.1.0",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.2",
+    "ts-jest": "^27.1.4",
+    "vue-eslint-parser": "^8.3.0",
     "vue-jest": "^3.0.4",
     "vuetify": "^2.5.3"
   }
