fix: replace some ids

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,6 +14,7 @@ jobs:
         os: [ubuntu-latest]
         node: [14]
 
+    environment: production
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
@@ -45,6 +46,8 @@ jobs:
         env:
           BASE_URL: /board-game-calendar/
           NODE_ENV: production
+          G_API_KEY: {{secrets.G_API_KEY}}
+          G_APP_ID: {{secrets.G_APP_ID}}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
